# ChatPDFv3

./: README.md  main.py  pyproject.toml
chatpdfv3/: __init__.py
chatpdfv3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chatpdfv3/config/: __init__.py  settings.py
chatpdfv3/core/: __init__.py  interpreter.py
chatpdfv3/interfaces/: __init__.py  cli.py
chatpdfv3/knowledge_base/: __init__.py  builder.py  chunker.py  embedder.py  qa.py  retriever.py  vectorstore.py
chatpdfv3/logging/: __init__.py  setup.py
chatpdfv3/review/: __init__.py  aggregator.py  clustering.py  draft.py  outline.py  pipeline.py  prompts.py
chatpdfv3/services/: __init__.py  deepseek_client.py  mineru.py
chatpdfv3/utils/: __init__.py  files.py  text.py
files/kb_store/: kb_config.json
files/kb_store/sources/CPC48.8.2024_20251130081936/: 6181ae06-56f8-4806-883b-5efa5edf4908_content_list.json  6181ae06-56f8-4806-883b-5efa5edf4908_model.json  full.md  layout.json
files/kb_store/sources/EPJC2023.83.973_20251130081940/: e6bbbb63-b92f-486f-b31a-2d3ed62d07cd_content_list.json  e6bbbb63-b92f-486f-b31a-2d3ed62d07cd_model.json  full.md  layout.json
files/kb_store/sources/PhysRevD.105.073007_20251130081943/: 3dd3b175-917a-4e02-a586-bcaa6f518d71_content_list.json  3dd3b175-917a-4e02-a586-bcaa6f518d71_model.json  full.md  layout.json
files/kb_store/sources/PhysRevD.107.033004_20251130081946/: 648edc16-70cb-4fc2-956d-5e5aa3fe6501_content_list.json  648edc16-70cb-4fc2-956d-5e5aa3fe6501_model.json  (+2 more)
files/test_kb/: answers.md
reviews/: 2025-11-30_kb_review.md
(+4 files in other folders)
